--- a/code/instalaciones_data.ipynb
+++ b/code/instalaciones_data.ipynb
@@ -16,7 +16,7 @@
     "import requests\n",
     "import pandas as pd\n",
     "\n",
-    "API_KEY = '4e1f86110caa98dbcd444fdf6229e002'\n",
+    "API_'\n",
     "FORM_ID = '250216539146152'\n",
     "\n",
     "def get_field_map():\n",
